adding few more changes on the mapper side

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=LAPTOP-3U9PDL2S;Database=Community;Integrated Security=True;;MultipleActiveResultSets=true"
+    "Default": "Server=LAPTOP-3U9PDL2S\\SQLEXPRESS;Database=Community;Integrated Security=True;MultipleActiveResultSets=true"
   }
 }
