--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -8,20 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="docker-compose.override.yml" />
-    <None Remove="docker-compose.yml" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Dapper.SimpleCRUD.ModelGenerator" Version="1.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Dapper" Version="1.60.6" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
-  </ItemGroup>
 
 </Project>
