--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DemoWebAPI": {
+    "Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
